fix: remove max-width: 288px form modal on mobile

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -157,7 +157,6 @@
 
 @media screen and (max-width: 630px) {
   .modal__container {
-    max-width: 288px;
     padding: 12px;
   }
 
